[tool.poetry]
name = "gpt-migrate"
version = "0.1.0"
description = "AI Powered Legacy Code Migration"
authors = ["OutSightAI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
litellm = "^1.40.6"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
