[tool.poetry]
name = "gpt-migrate"
version = "0.1.0"
description = "AI Powered Legacy Code Migration"
authors = ["OutSightAI"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.1.8"
langgraph = "^0.0.69"
grandalf = "^0.8"
black = "^24.4.2"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
